# TrackBox

./: .gitignore  Dockerfile.build  README.md  eslint.config.js  index.html  messageparameters.csv  package-lock.json  package.json  quasar.config.js
.github/workflows/: appimage.yml  build.yml  (+2 more)
assets/: ErrorNotFound-DZfSPJhN.js  IndexPage-47doX5zw.js  IndexPage-BJMvoE7x.css  IndexPage-BLP3gVdv.css  IndexPage-E1mQeEGn.js  MainLayout-CJRhoFbV.css  MainLayout-Cv3PuNwc.css  MainLayout-Cxvl5YQf.js  MainLayout-D2IwjfEq.js  QBtn-DP2givs0.js  SessionStorage-CIze9OL_.js  SessionStorage-DpBqCms0.js  axios-CJzI52BA.js  dist-js-BFMWfg3a.js  dist-js-BcIMj3cR.js  dist-js-BgS_qrrc.js  dist-js-CAjKIatL.js  dist-js-CFRk6mh-.js  dist-js-CJdV92xE.js  dist-js-CsEddj9p.js  dist-js-DcsT9zkW.js  dpi-COv_GEi_.js  event-D__D8OGp.js  flespi-io-DJNc2fv3.js  flespi-io-DvCw4eU_.js  i18n-CpoAPeIT.js  i18n-Ctpv9ZYU.js  index-BfHDQtkk.js  index-Bm322au9.js  index-wLA5fMQu.css  path-e5Y8oWwM.js  third-party-licenses-bYf-dLCn.js  tour-BTqR0QSu.js  tour-SZH1e9MP.js  tray-DMjwHLDM.js  tray-JsgLTtRi.js  vue.runtime.esm-bundler-Aru3Rrl_.js  window-D26iIt75.js  window-DEpGpU4h.js
docs/: architecture.md
scripts/: build-appimage.sh  gen-licenses.mjs  repack-appimage-no-wayland.sh  sync-app-name.mjs
src/: App.vue  log.js  platform.js  secureStore.js  storage.js  third-party-licenses.json  tour.js  updater.js
src-pwa/: manifest.json  register-service-worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+47 files in other folders)
