[package]
name = "trackbox"
version = "1.0.4"
description = "GPS tracker simulator for flespi"
authors = ["Evgenij Spitsyn <spev@gurtam.team>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rust-argon2 = "2"
getrandom = "0.2" # CSPRNG for the per-install Stronghold vault salt

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

# Optimize dependencies even in dev so argon2 / Stronghold key derivation isn't
# painfully slow in `tauri dev` (debug) — app code stays unoptimized/debuggable.
[profile.dev.package."*"]
opt-level = 2
